# testpilot

./: CMakeLists.txt  README.md  testpilot.pro
app/: CMakeLists.txt  app.pro  main.cpp
app/share/qml/: Earth.qml  ModelTerrain.qml  Pfd.qml  PfdTerrain.qml
cores/: CMakeLists.txt  connectionmanager.cpp  connectionmanager.h  cores_global.h  generalsettings.cpp  generalsettings.h  generalsettings.ui  iconnection.cpp  iconnection.h  icore.cpp  icore.h  icorelistener.h  ioptionspage.cpp  ioptionspage.h
extensionsystem/: CMakeLists.txt  extensionsystem.pri  extensionsystem.pro  extensionsystem_dependencies.pri  extensionsystem_global.h  iplugin.cpp  iplugin.h  iplugin_p.h  optionsparser.cpp  optionsparser.h  plugindetailsview.cpp  plugindetailsview.h  pluginerrorview.cpp  pluginerrorview.h  pluginerrorview.ui  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginspec.cpp  pluginspec.h  pluginspec_p.h  pluginview.cpp  pluginview.h  pluginview.qrc  pluginview_p.h
extensionsystem/test/: extensionsystem_test.pri  test.pro
extensionsystem/test/auto/: auto.pro
extensionsystem/test/manual/: manual.pro
iconnection/: CMakeLists.txt  iconnection.h  iconnection_global.h
iconnection/ipconnection/: ipconnection.pri  ipconnection.pro  ipconnection_global.h  ipconnection_internal.h  ipconnectionconfiguration.cpp  ipconnectionconfiguration.h  ipconnectionoptionspage.cpp  ipconnectionoptionspage.h  ipconnectionoptionspage.ui  ipconnectionplugin.cpp  ipconnectionplugin.h
iconnection/ophid/: CMakeLists.txt  opHID.pluginspec  ophid.pri  ophid.pro  ophid_dependencies.pri
iconnection/ophid/hidapi/: hidapi.h
iconnection/ophid/inc/: ophid.h  ophid_const.h  ophid_global.h  ophid_hidapi.h  ophid_plugin.h  ophid_usbmon.h  ophid_usbsignal.h
iconnection/ophid/src/: ophid.cpp  ophid_hidapi.cpp  ophid_plugin.cpp  ophid_usbmon_linux.cpp  ophid_usbmon_mac.cpp  ophid_usbmon_win.cpp  ophid_usbsignal.cpp  ophidform.cpp  ophidform.h  ophidform.ui
iconnection/serialconnection/: CMakeLists.txt  cscope.out  serial.pri  serial_global.h  serialconfig.cpp  serialconfig.h  serialconnection.pro  serialoptionspage.cpp  serialoptionspage.h  serialoptionspage.ui  serialplugin.cpp  serialplugin.h
iconnection/serialconnection/test/: CMakeLists.txt  testserial.cpp
mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.pro  mainwindow.qrc
opmap/: CMakeLists.txt  OPMapGadget.pluginspec  coordinateconversions.cpp  coordinateconversions.h  flightdatamodel.cpp  flightdatamodel.h  homeeditor.cpp  homeeditor.h  homeeditor.ui  modelmapproxy.cpp  modelmapproxy.h  modeluavoproxy.cpp  modeluavoproxy.h  opmap.pro  opmap.qrc  opmap_edit_waypoint_dialog.cpp  opmap_edit_waypoint_dialog.h  opmap_edit_waypoint_dialog.ui  opmap_global.h  opmap_overlay_widget.ui  opmap_statusbar_widget.cpp  opmap_statusbar_widget.h  opmap_statusbar_widget.ui  opmap_widget.ui  opmap_widget_complete-post10.ui  opmap_zoom_slider_widget.cpp  opmap_zoom_slider_widget.h  opmapgadget.cpp  opmapgadget.h  opmapgadgetconfiguration.cpp  opmapgadgetconfiguration.h  opmapgadgetfactory.cpp  opmapgadgetfactory.h  opmapgadgetoptionspage.cpp  opmapgadgetoptionspage.h  opmapgadgetoptionspage.ui  opmapgadgetwidget.cpp  opmapgadgetwidget.h  opmapplugin.cpp  opmapplugin.h  (+7 more)
opmap/opmapcontrol/: CMakeLists.txt  opmapcontrol.h  opmapcontrol.pri  opmapcontrol.pro
opmap/opmapcontrol/src/: CMakeLists.txt  common.pri
osgearth/: #osgearth.pro#  CMakeLists.txt  copydata.pro  osgearth.cpp  osgearth.h  osgearth.pri  osgearth.pro  osgearth_dependencies.pri  osgearth_global.h
osgearth/osgQtQuick/: DirtySupport.cpp  DirtySupport.hpp  Export.hpp  OSGBillboardNode.cpp  OSGBillboardNode.hpp  OSGCamera.cpp  OSGCamera.hpp  OSGFileNode.cpp  OSGFileNode.hpp  OSGGeoTransformNode.cpp  OSGGeoTransformNode.hpp  OSGGroup.cpp  OSGGroup.hpp  OSGImageNode.cpp  OSGImageNode.hpp  OSGNode.cpp  OSGNode.hpp  OSGShapeNode.cpp  OSGShapeNode.hpp  OSGSkyNode.cpp  OSGSkyNode.hpp  OSGTextNode.cpp  OSGTextNode.hpp  OSGTransformNode.cpp  OSGTransformNode.hpp  OSGViewport.cpp  OSGViewport.hpp
osgearth/osgQtQuick/ga/: OSGCameraManipulator.cpp  OSGCameraManipulator.hpp  OSGEarthManipulator.cpp  OSGEarthManipulator.hpp  OSGGeoTransformManipulator.cpp  OSGGeoTransformManipulator.hpp  OSGNodeTrackerManipulator.cpp  OSGNodeTrackerManipulator.hpp  (+2 more)
osgearth/utils/: qtwindowingsystem.cpp  qtwindowingsystem.h  shapeutils.cpp  shapeutils.h  utility.cpp  utility.h
settings/: CMakeLists.txt  testsettings.cpp
uavobjectwidget/: CMakeLists.txt  QScienceSpinBox.cpp  QScienceSpinBox.h  fieldtreeitem.h  ioptionspage.h  main.cpp  qtcolorbutton.h  treeitem.h  uavobjectbrowser.cpp  uavobjectbrowser.h  uavobjectbrowser.pro  uavobjectbrowser.ui  uavobjectbrowserconfiguration.cpp  uavobjectbrowserfactory.cpp  uavobjectbrowserfactory.h  uavobjectbrowseroptionspage.cpp  uavobjectbrowseroptionspage.h  uavobjectbrowseroptionspage.ui  uavobjectbrowserwidget.cpp  uavobjectbrowserwidget.h  uavobjecttreemodel.cpp  uavobjecttreemodel.h  viewoptions.ui
uavobjgenerator/: CMakeLists.txt  main.cpp  uavobjectparser.cpp  uavobjectparser.h  uavobjgenerator.pro
uavobjgenerator/generators/: generator_common.cpp  generator_common.h  generator_io.cpp  generator_io.h
uavtalk/: CMakeLists.txt  oplinkmanager.cpp  oplinkmanager.h  telemetry.cpp  telemetry.h  telemetrymanager.cpp  telemetrymanager.h  telemetrymonitor.cpp  telemetrymonitor.h  uavtalk.cpp  uavtalk.h  uavtalk.pri  uavtalk.pro  uavtalk_global.h  uavtalkplugin.cpp  uavtalkplugin.h
utils/: CMakeLists.txt  abstractprocess.h  abstractprocess_win.cpp  aggregate.cpp  aggregate.h  consoleprocess.cpp  consoleprocess.h  consoleprocess_win.cpp  crc.cpp  crc.h  hostosinfo.cpp  hostosinfo.h  pathutils.cpp  pathutils.h  qtcolorbutton.cpp  qtcolorbutton.h  qwineventnotifier_p.h  stylehelper.cpp  stylehelper.h  threadmanager.cpp  threadmanager.h  utils_global.h  winutils.cpp  winutils.h  xmlconfig.cpp  xmlconfig.h
welcomemode/: CMakeLists.txt  welcomemode.cpp  welcomemode.h  welcomemode.pro  welcomemode.qrc
welcomemode/qml/: WelcomePageButton.qml  main.qml
(+252 files in other folders)
