cmake_minimum_required(VERSION 3.2)

project(testPilot)
enable_testing()
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(testPilotFunctions)
add_definitions(-DGCS_BIG_NAME="KtcPilot")
add_subdirectory(utils)
add_subdirectory(extensionsystem)
add_subdirectory(uavobjgenerator)
add_subdirectory(uavobjectwidget)
add_subdirectory(uavtalk)
add_subdirectory(opmap)
add_subdirectory(connectionmanager)
add_subdirectory(cores)
add_subdirectory(modelqmlcontext)
add_subdirectory(quickwidgetproxy)
add_subdirectory(svgimageprovider)
add_subdirectory(testuavobjects)
add_subdirectory(uavobjects)
add_subdirectory(osgearth)
add_subdirectory(welcomemode)
add_subdirectory(mainwindow)
add_subdirectory(app)
add_subdirectory(settings)
add_subdirectory(iconnection)
# add_subdirectory(test1)
