find_package(Qt5Core)
find_package(Qt5Widgets)
# find_package(Qt5Qml)
# set(AttitudeState "${CMAKE_CURRENT_BINARY_DIR}/attitudestate.cpp")
add_definitions(-DQTCREATOR_UTILS_LIB)
add_definitions(-DDATA_REL_PATH="test")
add_definitions(-DLIB_REL_PATH="test")
add_definitions(-DPLUGIN_REL_PATH="test")
add_library(utils SHARED crc.cpp pathutils.cpp)
testpilot_library(utils)

qt5_use_modules(utils Core Widgets)
